force-app/main/default/objects/ssot__Promotion__dlm/fields/ssot__ActivePromotionStartDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__ActivePromotionStartDate__c</fullName>
    <label>Active Promotion</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ActivePromotionStartDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>