force-app/main/default/objects/ssot__Promotion__dlm/fields/ssot__DiscountBuyAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__DiscountBuyAmount__c</fullName>
    <label>Discount Buy Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DiscountBuyAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>