force-app/main/default/objects/ssot__Promotion__dlm/fields/ssot__DiscountBuyCount__c.field-meta.xml
<CustomField>
    <fullName>ssot__DiscountBuyCount__c</fullName>
    <label>Discount Buy Count</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DiscountBuyCount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>