force-app/main/default/objects/ssot__Promotion__dlm/fields/ssot__DiscountExclusivityType__c.field-meta.xml
<CustomField>
    <fullName>ssot__DiscountExclusivityType__c</fullName>
    <label>[DoNotUse]Discount Exclusivity Type</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DiscountExclusivityType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>