force-app/main/default/objects/ssot__Promotion__dlm/fields/ssot__DiscountExclusivityTypeId__c.field-meta.xml
<CustomField>
    <fullName>ssot__DiscountExclusivityTypeId__c</fullName>
    <label>Discount Exclusivity Type</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DiscountExclusivityTypeId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>