force-app/main/default/objects/ssot__Promotion__dlm/fields/ssot__DiscountType__c.field-meta.xml
<CustomField>
    <fullName>ssot__DiscountType__c</fullName>
    <label>[DoNotUse]Discount Type</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DiscountType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>