force-app/main/default/objects/ssot__Promotion__dlm/fields/ssot__DiscountValueAmt__c.field-meta.xml
<CustomField>
    <fullName>ssot__DiscountValueAmt__c</fullName>
    <label>Discount Value Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DiscountValueAmt</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>