force-app/main/default/objects/ssot__Promotion__dlm/fields/ssot__EvaluationOrderRankNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__EvaluationOrderRankNumber__c</fullName>
    <label>[DoNotUse]Evaluation Order Rank</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EvaluationOrderRankNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>