force-app/main/default/objects/ssot__Promotion__dlm/fields/ssot__InactivePromotionEndDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__InactivePromotionEndDate__c</fullName>
    <label>Inactive Promotion</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>InactivePromotionEndDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>