force-app/main/default/objects/ssot__Promotion__dlm/fields/ssot__IsCommercePromotion__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsCommercePromotion__c</fullName>
    <label>Commerce Promotion</label>
    <length>5</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsCommercePromotion</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>