force-app/main/default/objects/ssot__Promotion__dlm/fields/ssot__PointsQuantity__c.field-meta.xml
<CustomField>
    <fullName>ssot__PointsQuantity__c</fullName>
    <label>Points Quantity</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PointsQuantity</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>