force-app/main/default/objects/ssot__Promotion__dlm/fields/ssot__PromotionalMessage__c.field-meta.xml
<CustomField>
    <fullName>ssot__PromotionalMessage__c</fullName>
    <label>Promotional Message</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PromotionalMessage</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>