force-app/main/default/objects/ssot__Promotion__dlm/fields/ssot__PromotionCodeText__c.field-meta.xml
<CustomField>
    <fullName>ssot__PromotionCodeText__c</fullName>
    <label>Promotion Code</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PromotionCodeText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>