force-app/main/default/objects/ssot__Promotion__dlm/fields/ssot__PromotionMarketSegments__c.field-meta.xml
<CustomField>
    <fullName>ssot__PromotionMarketSegments__c</fullName>
    <label>PromotionMarketSegments relationship</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PromotionMarketSegments</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>