force-app/main/default/objects/ssot__Promotion__dlm/fields/ssot__PromotionMethod__c.field-meta.xml
<CustomField>
    <fullName>ssot__PromotionMethod__c</fullName>
    <label>[DoNotUse]Promotion Method</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PromotionMethod</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>