force-app/main/default/objects/ssot__Promotion__dlm/fields/ssot__PromotionMethodId__c.field-meta.xml
<CustomField>
    <fullName>ssot__PromotionMethodId__c</fullName>
    <label>Promotion Method</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PromotionMethodId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>