force-app/main/default/objects/ssot__Promotion__dlm/fields/ssot__PromotionReason__c.field-meta.xml
<CustomField>
    <fullName>ssot__PromotionReason__c</fullName>
    <label>[DoNotUse]Promotion Reason</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PromotionReason</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>