force-app/main/default/objects/ssot__Promotion__dlm/fields/ssot__PromotionStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__PromotionStatus__c</fullName>
    <label>[DoNotUse]Promotion Status</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PromotionStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>