force-app/main/default/objects/ssot__Promotion__dlm/fields/ssot__rel_1697761197022_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761197022_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Promotion_LoyaltyProgramCurrencyId_m_rel</label>
    <referenceTo>ssot__LoyaltyProgramCurrency__dlm</referenceTo>
    <relationshipLabel>Promotion_LoyaltyProgramCurrencyId_m_rel</relationshipLabel>
    <relationshipName>rel_1697761197022_end</relationshipName>
    <type>Lookup</type>
</CustomField>