force-app/main/default/objects/ssot__Promotion__dlm/fields/ssot__rel_1697761197092_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761197092_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Promotion_LoyaltyProgramId_map_Loyal_rel</label>
    <referenceTo>ssot__LoyaltyProgram__dlm</referenceTo>
    <relationshipLabel>Promotion_LoyaltyProgramId_map_Loyal_rel</relationshipLabel>
    <relationshipName>rel_1697761197092_end</relationshipName>
    <type>Lookup</type>
</CustomField>