force-app/main/default/objects/ssot__Promotion__dlm/fields/ssot__rel_1697761206093_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761206093_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VoucherDefinition_Id_map_Promotion_D_rel</label>
    <referenceTo>ssot__VoucherDefinition__dlm</referenceTo>
    <relationshipLabel>VoucherDefinition_Id_map_Promotion_D_rel</relationshipLabel>
    <relationshipName>rel_1697761206093_end</relationshipName>
    <type>Lookup</type>
</CustomField>