force-app/main/default/objects/ssot__Promotion__dlm/fields/ssot__RelatedPromotionId__c.field-meta.xml
<CustomField>
    <fullName>ssot__RelatedPromotionId__c</fullName>
    <label>Related Promotion</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RelatedPromotionId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>