force-app/main/default/objects/ssot__Promotion__dlm/fields/ssot__TotalRewardValueAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__TotalRewardValueAmount__c</fullName>
    <label>Total Reward Value Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TotalRewardValueAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>